--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <p class="small_text">© 2016 clemo.</p>
             <p class="end_text2">all rights reserved</p>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script src = "js/script.js"></script>
     </body>
